--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
+    "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.0.16",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
+    "vue-basic-alert": "^1.1.0",
+    "vue-dk-toast": "^3.2.1",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
